<resources>
    <string name="app_name">FragmentExample</string>
    <string name="titem">Department</string>
    <string name="titem_employee">Employee</string>
    <string name="titem_employeelist">Employeelist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tiet_employeename">Enter Employee\'s Name</string>
    <string name="tiet_age">Enter Age</string>
    <string name="tiet_address">Enter Address</string>
    <string name="tiet_salary">Enter Salary</string>
    <string name="btn_edit">Edit</string>
</resources>
